--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,43 @@
 name: Node.js CI
 
 on:
- push: 
-  branches:
-   -main
- pull_request:
-  branches:
-   -main
 
-jobs:
- build:
+push:
 
-  runs-on: ubuntu-latest
+branches:
 
-  strategy:
-   matrix:
-    node-version: [20.x]
+- main
 
-  steps:
-  -name: Checkout repository
-   uses: actions/checkout@v3
+pull_request:
 
-  -name: Set up Node.js
-   uses: actions/setup-node@v3
-   with: 
-    node-version: ${{ matrix.node-version }}
+branches:
 
-  -name: Install dependencies
-   run: npm install
+- main
 
-  -name: Start application
-   run: npm start
+jobs: build:
+
+runs-on: ubuntu-latest
+
+strategy:
+
+matrix:
+
+node-version: [20.x]
+
+steps:
+
+- name: Checkout repository uses: actions/checkout@v3
+
+- name: Set up Node.js
+
+uses: actions/setup-node@v3
+
+with:
+
+node-version: $((matrix.node-version }
+
+- name: Install dependencies run: npm install
+
+- name: Start application
+
+run: npm start
